Ninja: Wrap rules using '>' shell redirection with 'cmd /C' on Windows

This is needed for the clang-scan-deps rule added by commit 0e21e55fc5
(Clang: Record Clang 16.0 C++ modules flags only for GNU-like front-end,
2023-03-16).

Fixes: #24611